Simplify intellij idea vmoptions