@@ -1,44 +1,22 @@
--ea
--server
--Xms1024m
--Xmx3072m
--Xss1m
--XX:CMSInitiatingOccupancyFraction=60
--XX:CompileThreshold=10000
--XX:LargePageSizeInBytes=256m
--XX:MaxMetaspaceSize=1G
--XX:MetaspaceSize=512M
--XX:ParallelGCThreads=6
--XX:ReservedCodeCacheSize=1G
--XX:SoftRefLRUPolicyMSPerMB=50
--Xverify:none
--Dawt.useSystemAAFontSettings=lcd
--Deditor.distraction.free.mode=true
--Dfile.encoding=UTF-8
--Dhidpi=true
--Djava.net.preferIPv4Stack=true
--Dsun.io.useCanonCaches=false
--XX:+CMSClassUnloadingEnabled
--XX:+CMSClassUnloadingEnabled
--XX:+CMSParallelRemarkEnabled
--XX:+DisableExplicitGC
--XX:+DoEscapeAnalysis
--XX:+ExplicitGCInvokesConcurrent
--XX:+HeapDumpOnOutOfMemoryError
--XX:+OptimizeStringConcat
--XX:+PrintFlagsFinal
--XX:+PrintGCDetails
--XX:+UnlockDiagnosticVMOptions
--XX:+UnlockExperimentalVMOptions
--XX:+UseAdaptiveGCBoundary
--XX:+UseCodeCacheFlushing
+-Xms128m
+-Xmx2048m
+-XX:ReservedCodeCacheSize=240m
 -XX:+UseCompressedOops
+-Dfile.encoding=UTF-8
 -XX:+UseConcMarkSweepGC
--XX:+UseFastAccessorMethods
--XX:+UseSplitVerifier
--XX:+UseStringCache
--XX:-OmitStackTraceInFastThrow
--Dide.no.platform.update=true
+-XX:SoftRefLRUPolicyMSPerMB=50
+-ea
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
 -Djdk.http.auth.tunneling.disabledSchemes=""
--XX:MaxJavaStackTraceDepth=-1
--agentlib:yjpagent=probe_disable=*,disablealloc,disabletracing,onlylocal,disableexceptiontelemetry,delay=10000,sessionname=IntelliJIdea2018.3
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
+-XX:MaxJavaStackTraceDepth=10000
+-Xverify:none
+
+-XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
+-XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
+-Dide.no.platform.update=true
+
+# By Rafa
+-Deditor.distraction.free.mode=true
